# kryptex

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
_deploy/: .env.example  docker-compose.yml
app/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_logins_is_fav.py
app/utils/: crypto.py  recrypt_passwords.py
backend/: requirements.txt
backend/app/: admin.py  forms.py  models.py  serializers.py
backend/app/migrations/: 0001_initial.py
backend/project/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
project/: local_settings.example.py  settings.py  urls.py
src/: main.py
src/controllers/: password.py  password_type.py  user.py
src/database/: connection.py  initialization.py
src/pages/: login.py
src/utils/: crypto.py  cryptor.py  ui.py
src/views/: app.py  auth.py  home.py
static/css/: index.css  reset.css
static/js/: index.js
templates/: index.html  login.html
templates/html/: index.html
