[project]
name = "none"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "gabriel-pagani", email = "gabrielpaganidesouza@gmail.com" }
]
dependencies = [
  "flet>=0.80.1"
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.1",
]

[tool.flet]
org = "com.none"
product = "none"
company = "None"
copyright = "Copyright (C) 2026 by None"

[tool.flet.app]
path = "src"